feat: enhanced simulation controller tests for 100% coverage