@@ -1,35 +1,77 @@
-
+import Controller.SimulationController;
 import org.junit.jupiter.api.Test;
+import org.junit.jupiter.api.BeforeEach;
+import static org.junit.jupiter.api.Assertions.*;
 
 import model.Duende;
 import datastructure.TreeMapAdaptado;
+import view.SimulationView;
 
 import java.util.ArrayList;
 import java.util.List;
-
-import static org.junit.jupiter.api.Assertions.*;
+import javax.swing.JFrame;
 
 public class SimulationControllerTest {
+
+    @BeforeEach
+    void setUp() {
+        Controller.SimulationController.iniciarSimulacao(2, 100.0, 1000L);
+    }
+
+    @Test
+    public void testIniciarSimulacaoComParametrosValidos() {
+        assertDoesNotThrow(() -> Controller.SimulationController.iniciarSimulacao(2, 100.0, 1000L));
+    }
+
+    @Test
+    public void testIniciarSimulacaoComNumDuendesInvalido() {
+        assertThrows(IllegalArgumentException.class, () ->
+                Controller.SimulationController.iniciarSimulacao(1, 100.0, 1000L));
+
+        assertThrows(IllegalArgumentException.class, () ->
+                Controller.SimulationController.iniciarSimulacao(21, 100.0, 1000L));
+    }
+
+    @Test
+    public void testIniciarSimulacaoComMaxHorizonInvalido() {
+        assertThrows(IllegalArgumentException.class, () ->
+                Controller.SimulationController.iniciarSimulacao(2, 0, 1000L));
+
+        assertThrows(IllegalArgumentException.class, () ->
+                Controller.SimulationController.iniciarSimulacao(2, -1.0, 1000L));
+    }
+
+    @Test
+    public void testIniciarSimulacaoComMaxCoinsInvalido() {
+        assertThrows(IllegalArgumentException.class, () ->
+                Controller.SimulationController.iniciarSimulacao(2, 100.0, 0));
+
+        assertThrows(IllegalArgumentException.class, () ->
+                Controller.SimulationController.iniciarSimulacao(2, 100.0, -1L));
+    }
+
+    @Test
+    public void testIniciarSimulacaoComMaxCoinsExcedente() {
+        assertThrows(IllegalArgumentException.class, () ->
+                Controller.SimulationController.iniciarSimulacao(2, 100.0, 2000001L));
+    }
 
     @Test
     public void testCriarDuendesComQuantidadeValida() {
         List<Duende> duendes = Controller.SimulationController.criarDuendes(3);
         assertEquals(3, duendes.size());
-        assertEquals(0, duendes.getFirst().getId());
+        assertEquals(0, duendes.get(0).getId());
+        assertEquals(1, duendes.get(1).getId());
+        assertEquals(2, duendes.get(2).getId());
     }
 
     @Test
     public void testCriarDuendesComQuantidadeInvalida() {
-        //!Teste de borda
-        assertThrows(IllegalArgumentException.class, () -> Controller.SimulationController.criarDuendes(1));
-        assertThrows(IllegalArgumentException.class, () -> Controller.SimulationController.criarDuendes(21));
-    }
+        assertThrows(IllegalArgumentException.class, () ->
+                Controller.SimulationController.criarDuendes(1));
 
-    @Test
-    public void testIniciarSimulacaoComPosicaoInvalida() {
-        //!Teste de borda
-        assertThrows(IllegalArgumentException.class, () -> Controller.SimulationController.iniciarSimulacao(2, -1, 100));
-        assertThrows(IllegalArgumentException.class, () -> Controller.SimulationController.iniciarSimulacao(2, 0, 100));
+        assertThrows(IllegalArgumentException.class, () ->
+                Controller.SimulationController.criarDuendes(21));
     }
 
     @Test
@@ -37,49 +79,138 @@ public class SimulationControllerTest {
         List<Duende> duendes = Controller.SimulationController.criarDuendes(2);
         TreeMapAdaptado tma = Controller.SimulationController.inicializarTreeMap(duendes);
         assertFalse(tma.treeMapPrincipal.isEmpty());
-
-        List<Duende> duendes2 = Controller.SimulationController.criarDuendes(20);
-        TreeMapAdaptado tma2 = Controller.SimulationController.inicializarTreeMap(duendes2);
-        assertTrue(tma2.treeMapPrincipal.size() > tma.treeMapPrincipal.size());
+        assertEquals(2, tma.treeMapPrincipal.size());
     }
 
+    @Test
+    public void testInicializarTreeMapComListaNula() {
+        assertThrows(IllegalArgumentException.class, () ->
+                Controller.SimulationController.inicializarTreeMap(null));
+    }
 
     @Test
-    public void testInicializarTreeMapComListaNulaOuVazia() {
-        assertThrows(IllegalArgumentException.class, () -> Controller.SimulationController.inicializarTreeMap(null));
-        assertThrows(IllegalArgumentException.class, () -> Controller.SimulationController.inicializarTreeMap(new ArrayList<>()));
+    public void testInicializarTreeMapComListaVazia() {
+        assertThrows(IllegalArgumentException.class, () ->
+                Controller.SimulationController.inicializarTreeMap(new ArrayList<>()));
+    }
+
+    @Test
+    public void testCriarEExibirJanelaComDuendesValidos() {
+        List<Duende> duendes = Controller.SimulationController.criarDuendes(2);
+        SimulationView panel = Controller.SimulationController.criarEExibirJanela(duendes);
+        assertNotNull(panel);
+
+        // Verifica se o frame foi criado
+        JFrame frame = (JFrame) panel.getTopLevelAncestor();
+        assertNotNull(frame);
+        assertEquals("Simulação de Duendes", frame.getTitle());
+    }
+
+    @Test
+    public void testCriarEExibirJanelaComListaNula() {
+        assertThrows(IllegalArgumentException.class, () ->
+                Controller.SimulationController.criarEExibirJanela(null));
+    }
+
+    @Test
+    public void testCriarEExibirJanelaComListaVazia() {
+        assertThrows(IllegalArgumentException.class, () ->
+                Controller.SimulationController.criarEExibirJanela(new ArrayList<>()));
+    }
+
+    @Test
+    public void testMoverERoubarComParametrosValidos() {
+        List<Duende> duendes = Controller.SimulationController.criarDuendes(2);
+        TreeMapAdaptado tma = Controller.SimulationController.inicializarTreeMap(duendes);
+        SimulationView panel = Controller.SimulationController.criarEExibirJanela(duendes);
+
+        assertDoesNotThrow(() ->
+                Controller.SimulationController.moverERoubar(duendes.getFirst(), tma, panel));
+    }
+
+    @Test
+    public void testMoverERoubarComDuendeNulo() {
+        List<Duende> duendes = Controller.SimulationController.criarDuendes(2);
+        TreeMapAdaptado tma = Controller.SimulationController.inicializarTreeMap(duendes);
+        SimulationView panel = Controller.SimulationController.criarEExibirJanela(duendes);
+
+        assertThrows(IllegalArgumentException.class, () ->
+                Controller.SimulationController.moverERoubar(null, tma, panel));
+    }
+
+    @Test
+    public void testMoverERoubarComTreeMapNulo() {
+        List<Duende> duendes = Controller.SimulationController.criarDuendes(2);
+        SimulationView panel = Controller.SimulationController.criarEExibirJanela(duendes);
+
+        assertThrows(IllegalArgumentException.class, () ->
+                Controller.SimulationController.moverERoubar(duendes.getFirst(), null, panel));
+    }
+
+    @Test
+    public void testMoverERoubarComPanelNulo() {
+        List<Duende> duendes = Controller.SimulationController.criarDuendes(2);
+        TreeMapAdaptado tma = Controller.SimulationController.inicializarTreeMap(duendes);
+
+        assertThrows(IllegalArgumentException.class, () ->
+                Controller.SimulationController.moverERoubar(duendes.getFirst(), tma, null));
     }
 
     @Test
     public void testVerificarChegadaPorMoedas() {
-        Duende d = new Duende(1);
-        d.setCoins(100L);
-        Controller.SimulationController.iniciarSimulacao(2, 10, 100); // seta maxCoins = 100
-        assertTrue(new Controller.SimulationController().verificarChegada(d, 100L));
+        Duende duende = new Duende(1);
+        duende.setCoins(1000L);
+        assertTrue(Controller.SimulationController.verificarChegada(duende, 1000L));
     }
 
     @Test
     public void testVerificarChegadaPorPosicao() {
-        Duende d = new Duende(1);
-        d.setPosition(50);
-        Controller.SimulationController.iniciarSimulacao(2, 50, 999); // seta maxHorizon = 50
-        assertTrue(new Controller.SimulationController().verificarChegada(d, 999L));
+        Duende duende = new Duende(1);
+        duende.setPosition(100.0);
+        assertTrue(Controller.SimulationController.verificarChegada(duende, 1000L));
     }
 
     @Test
     public void testVerificarChegadaSemCondicao() {
-        Duende d = new Duende(1);
-        d.setCoins(10L);
-        d.setPosition(5);
-        Controller.SimulationController.iniciarSimulacao(2, 100, 1000);
-        assertFalse(new Controller.SimulationController().verificarChegada(d, 1000L));
+        Duende duende = new Duende(1);
+        duende.setCoins(500L);
+        duende.setPosition(50.0);
+        assertFalse(Controller.SimulationController.verificarChegada(duende, 1000L));
     }
 
     @Test
-    public void testMoverERoubarComParametrosNulos() {
-        assertThrows(IllegalArgumentException.class, () -> Controller.SimulationController.moverERoubar(null, null, null));
+    public void testVerificarChegadaComDuendeNulo() {
+        assertThrows(IllegalArgumentException.class, () ->
+                Controller.SimulationController.verificarChegada(null, 1000L));
     }
 
-    // Métodos como executarLogicaSimulacao e criarEExibirJanela são difíceis de testar diretamente
-    // pois envolvem GUI e Threads. Para isso, considerar testes de integração ou mocks avançados.
+    @Test
+    public void testGetMaxHorizon() {
+        Controller.SimulationController.iniciarSimulacao(2, 150.0, 1000L);
+        assertEquals(150.0, Controller.SimulationController.getMaxHorizon());
+    }
+
+    // Teste para executarLogicaSimulacao (simplificado, já que envolve threads e UI)
+    @Test
+    public void testExecutarLogicaSimulacaoNaoLancaExcecoes() {
+        List<Duende> duendes = Controller.SimulationController.criarDuendes(2);
+        TreeMapAdaptado tma = Controller.SimulationController.inicializarTreeMap(duendes);
+        SimulationView panel = Controller.SimulationController.criarEExibirJanela(duendes);
+
+        assertDoesNotThrow(() ->
+                Controller.SimulationController.executarLogicaSimulacao(duendes, tma, panel));
+    }
+
+    // Teste para pausaVisualizacao (verifica apenas que não lança exceções)
+    @Test
+    public void testPausaVisualizacaoNaoLancaExcecoes() {
+        assertDoesNotThrow(SimulationController::pausaVisualizacao);
+    }
+
+    // Teste para exibirResultadosFinais (verifica apenas que não lança exceções)
+    @Test
+    public void testExibirResultadosFinaisNaoLancaExcecoes() {
+        List<Duende> duendes = Controller.SimulationController.criarDuendes(2);
+        assertDoesNotThrow(() -> Controller.SimulationController.exibirResultadosFinais(duendes));
+    }
 }
